adding new feature set numbers of games to be won

--- a/index.html
+++ b/index.html
@@ -8,8 +8,11 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
 </head>
 <body>
+    <input type="text" id="maxInput" placeholder="Number of games you should one of you win ">
+    <button id="maxButton" onclick="confirmMax()">confirm!</button>
     <div id="gif"></div>
     <h1>Welcome to my XO game</h1>
+    <div id="max"></div>
     <div>
     <button id="button1" class="button"></button>
     <button id="button2" class="button"></button>
